Fix overflow problems on mobile views (resolves slub/slub_digitalcollections/slub#9)

--- a/Resources/Private/Less/Sidebar.less
+++ b/Resources/Private/Less/Sidebar.less
@@ -445,17 +445,18 @@
 
 /* ==============[ toc (inside the respective wrap > see above) ]========================= */
 .tx-dlf-toc {
-    position: relative;
-    height: 100%;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    bottom: 15px;
+    left: 15px;
+    overflow: hidden;
+    overflow-y: auto;
     ul.toc {
         position: relative;
-        overflow: hidden;
-        overflow-y: auto;
-        -webkit-overflow-scrolling: touch;
-        height: 100%;
         line-height: 1.2;
         font-size: 14px;
-        border-top: 1px solid @lightgrey-color;
+        border-top: 1px solid fade(@lightgrey-color,20%);
         ul li {
             position: relative;
             &.submenu {
@@ -532,6 +533,7 @@
                     background: url('@{basepath}Resources/Public/Images/viewerTocIcons.svg') no-repeat -90px 0;
                     background-size: auto 60px;
                     display: block;
+                    color: transparent;
                     .transform(scale(.6));
                     &.meta-type-Abbildung {
                         background-position: 0 0;
@@ -561,6 +563,12 @@
         }
     }
     @media screen and (min-width: @tabletLandscapeViewportWidth) {
+        position: relative;
+        top: auto;
+        right: auto;
+        left: auto;
+        bottom: auto;
+        overflow: visible;
         &:after {
             position: absolute;
             top: 0;
